# gpt2-from-scratch

./: .gitignore  Makefile  README.md  main.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
dataset/: agricultura.txt  capitalFederal.txt  cortico.txt  cronicasImorais.txt  historiaIlha.txt
src/: __init__.py  attention.py  config.py  dataset.py  evaluate.py  gpt_configurations.json  metrics.py  model.py  settings.py  tokenizer.py  train.py  transformer_block.py  utils.py
src/dataload/: dataset.py  tokenizer.py
src/gptmodel/: gqa_model.py  gqa_transformer_block.py  grouped_query_attention.py  model.py  multi_head_attention.py  transformer_block.py  utils.py
src/gptmodel/layers/: feed_foward.py  gelu.py  layer_norm.py
src/layers/: feed_foward.py  gelu.py  layer_norm.py
test/: test_attention.py  test_model.py  test_utils.py
