[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-from-scratch"
version = "0.0.1"
authors = [
  { name="Diogo" },
  { name="Gabriel" },
  { name="Paulo Hernane Fontes e Silva", email="paulo.hernane.silva@ccc.ufcg.edu.br" },
]
description = "Implementação do GPT-2 em português a partir do zero."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "tokenizers",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/PauloHFS/gpt2-from-scratch"
Repository = "https://github.com/PauloHFS/gpt2-from-scratch"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "test"
]